--- a/rapid-note/src/components/Header.css
+++ b/rapid-note/src/components/Header.css
@@ -1,17 +1,19 @@
 
 
   .Container-HeaderRapidNote {
-    background-color: white;
+    background-color: #92daee;
     width: 100%;
     height: 11vh;
   }
   .Content-HeaderInfo {
-    background-color: white;
+    background-color: #92daee ;
   }
   .LogoHeader {
-    width: 110vw;
+    width: 90%;
     height: 15vh;
     margin-top: 1vmin;
+    display: flex;
+    flex-direction: column;
     align-items: center;
   }
   .Welcome {
@@ -23,6 +25,7 @@
   .Content-BtnLogOut {
     margin-top: -6vmin;
     margin-left: 8em;
+
   }
   .BtnLogOut{
   height: 1vmin;
@@ -35,35 +38,31 @@
   cursor: pointer;
   color: blue;
   padding: 0px 0px 0px 0px;
+  background-color: #92daee;
   }
 
-/*For tablet horizontal*/
+/*For tablet Ipad Air*/
 @media (min-width: 600px) and (max-width: 1199px) {
 
   .LogoHeader {
-    width: 95vw;
+    width: 90%;
     height: 8em;
     margin-top: 2em;
-    margin-left: -1em;
+    margin-left: 6em;
   }
   .Welcome {
-    margin-left: -6em;
-    font-size: 20px;
+    margin-left: -3em;
+    font-size: 24px;
+    margin-top: 3vmin;
   }
   .Content-BtnLogOut {
-    margin-top: -6vmin;
-    margin-left: 7em;
+    margin-top: -1.8em;
+    margin-left: 19em;
+    background-color:#92daee;
   }
   .BtnLogOut{
     height: 1vmin;
-    width: 60vmin;
-    font-family: 'apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;';
-    font-size: 20px;
-    background-color: white;
-    border-radius: 20px;
-    border: none;
-    cursor: pointer;
-    color: blue;
-    padding: 0px 0px 0px 0px;
+    width: 8em;
+    font-size: 24px;
     }
 }
